--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "enedis_back",
+  "name": "subject_line_tester_back",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
@@ -12,17 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "argon2": "^0.28.5",
     "body-parser": "^1.20.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "got": "^11.8.0",
     "joi": "^17.6.0",
-    "jsonwebtoken": "^8.5.1",
-    "multer": "^1.4.4",
-    "mysql2": "^2.3.3",
     "node-fetch": "^3.2.4",
     "nodemon": "^2.0.15",
     "openai": "^2.0.5"
