--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "joi": "^17.6.0",
+    "jquery": "^3.6.0",
     "node-fetch": "^3.2.4",
     "nodemon": "^2.0.15",
     "openai": "^2.0.5"
